contando a miña vida

--- a/_posts/2016-04-21-primer.md
+++ b/_posts/2016-04-21-primer.md
@@ -4,7 +4,13 @@ title: "Esta é a boa"
 date: 2016-04-21
 ---
 
-Well. Finally got around to putting this old website together. 
-Neat thing about it - powered by [Jekyll](http://jekyllrb.com) 
-and I can use Markdown to author my posts. 
-It actually is a lot easier than I thought it was going to be.
+Xa fabriquei o directorio _posts/ e puxen de nome a este ficheiro 2016-04-21-primer.md
+debería verse empregando
+[https://irocho.github.io/2016/04/21/primer.md](https://irocho.github.io/2016/04/21/primer.md)
+vai ti saber as razóns polas que non vai
+
+Fixen todo esto coa axuda do estupendo
+http://jmcglone.com/guides/github-pages/
+Do invento de [Jekyll](http://jekyllrb.com) 
+Cómpre usar Markdown e disque [esta chuleta está estupenda](http://packetlife.net/media/library/16/Markdown.pdf)
+
