Lembrar que o ficheiro chámase .md e a páxina.html

--- a/_posts/2016-04-21-primer.md
+++ b/_posts/2016-04-21-primer.md
@@ -5,9 +5,12 @@ date: 2016-04-21
 ---
 
 Xa fabriquei o directorio _posts/ e puxen de nome a este ficheiro 2016-04-21-primer.md
-debería verse empregando
-[https://irocho.github.io/2016/04/21/primer.md](https://irocho.github.io/2016/04/21/primer.md)
-vai ti saber as razóns polas que non vai
+debería verse modificando:
+* guións por barras
+* .md por .html
+Ou sexa:
+[https://irocho.github.io/2016/04/21/primer.html](https://irocho.github.io/2016/04/21/primer.html)
+Agora si, ou?
 
 Fixen todo esto coa axuda do estupendo
 http://jmcglone.com/guides/github-pages/
