--- a/_posts/2016-04-21-primer.md
+++ b/_posts/2016-04-21-primer.md
@@ -4,7 +4,7 @@ title: "Esta é a boa"
 date: 2016-04-21
 ---
 
-Xa fabriquei o directorio _posts/ e puxen de nome a este ficheiro 2016-04-21-primer.md
+Xa fabriquei o directorio _posts/ e puxen de nome a este ficheiro `2016-04-21-primer.md`
 debería verse modificando:
 
 * guións por barras
