importante actualizar título e data

--- a/_posts/2016-04-20-chuleta.md
+++ b/_posts/2016-04-20-chuleta.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: "Esta é a boa"
-date: 2016-04-21
+title: "Pequena chuleta de Markdown"
+date: 2016-04-20
 ---
 
 # Pequena chuleta de Markdown 
