melloradas as ligazóns ó pdf de Markdown

--- a/_posts/2016-04-20-chuleta.md
+++ b/_posts/2016-04-20-chuleta.md
@@ -36,5 +36,4 @@ __esto entre dobres guións baixos__
 
 ![Cando sexa maior haberá unha imaxe aquí mismamente](/path/to/img.jpg)
 
-Fixen todo esto coa axuda do estupendo
-http://jmcglone.com/guides/github-pages/
+Fixen todo esto coa axuda da [estupenda chuleta](http://packetlife.net/media/library/16/Markdown.pdf)
