--- a/_posts/2016-04-21-primer.md
+++ b/_posts/2016-04-21-primer.md
@@ -4,19 +4,24 @@ title: "Esta é a boa"
 date: 2016-04-21
 ---
 
-Xa fabriquei o directorio _posts/ e puxen de nome a este ficheiro `2016-04-21-primer.md`
-debería verse modificando:
+Xa fabriquei o directorio _posts/ e puxen de nome a este ficheiro
+`2016-04-21-primer.md`
+
+debería verse modificando na URL:
 
 * guións por barras
 * .md por .html
- 
+
 
 Ou sexa:
 [https://irocho.github.io/2016/04/21/primer.html](https://irocho.github.io/2016/04/21/primer.html)
+
 Agora si, ou?
 
 Fixen todo esto coa axuda do estupendo
-http://jmcglone.com/guides/github-pages/
-Do invento de [Jekyll](http://jekyllrb.com) 
-Cómpre usar Markdown e disque [esta chuleta está estupenda](http://packetlife.net/media/library/16/Markdown.pdf)
 
+http://jmcglone.com/guides/github-pages/
+
+Do invento de [Jekyll](http://jekyllrb.com)
+
+Cómpre usar Markdown e disque [esta chuleta está estupenda](http://packetlife.net/media/library/16/Markdown.pdf)
