--- a/_posts/2016-04-21-primer.md
+++ b/_posts/2016-04-21-primer.md
@@ -4,24 +4,26 @@ title: "Esta é a boa"
 date: 2016-04-21
 ---
 
-Xa fabriquei o directorio _posts/ e puxen de nome a este ficheiro
+Xa fabriquei o directorio `_posts/` e puxen de nome a este ficheiro
+
 `2016-04-21-primer.md`
 
-debería verse modificando na URL:
+
+
+
+Para quen queira velo ten que premer na ligazón:
+[https://irocho.github.io/2016/04/21/primer.html](https://irocho.github.io/2016/04/21/primer.html)
+
+moito olliño coas diferencias entre o nome do ficheiro e o da URL:
 
 * guións por barras
 * .md por .html
 
 
-Ou sexa:
-[https://irocho.github.io/2016/04/21/primer.html](https://irocho.github.io/2016/04/21/primer.html)
-
-Agora si, ou?
-
-Fixen todo esto coa axuda do estupendo
+Fixen todo esto coa axuda do estupendo:
 
 http://jmcglone.com/guides/github-pages/
 
-Do invento de [Jekyll](http://jekyllrb.com)
+Feito con [Jekyll](http://jekyllrb.com)
 
-Cómpre usar Markdown e disque [esta chuleta está estupenda](http://packetlife.net/media/library/16/Markdown.pdf)
+Cómpre usar Markdown e disque [esta chuleta está estupenda](http://packetlife.net/media/library/16/Markdown.pdf) pero a miña tamén ten [[o seu aquel|2016-04-20-chuleta]]
