--- a/_posts/2016-04-21-primer.md
+++ b/_posts/2016-04-21-primer.md
@@ -8,9 +8,6 @@ Xa fabriquei o directorio `_posts/` e puxen de nome a este ficheiro
 
 `2016-04-21-primer.md`
 
-
-
-
 Para quen queira velo ten que premer na ligazón:
 [https://irocho.github.io/2016/04/21/primer.html](https://irocho.github.io/2016/04/21/primer.html)
 
@@ -26,4 +23,5 @@ http://jmcglone.com/guides/github-pages/
 
 Feito con [Jekyll](http://jekyllrb.com)
 
-Cómpre usar Markdown e disque [esta chuleta está estupenda](http://packetlife.net/media/library/16/Markdown.pdf) pero a miña tamén ten [[o seu aquel|2016-04-20-chuleta]]
+Cómpre usar Markdown e disque [esta chuleta está estupenda](http://packetlife.net/media/library/16/Markdown.pdf) pero a miña tamén ten 
+[o seu aquel|2016-04-20-chuleta]
