--- a/_posts/2016-04-21-primer.md
+++ b/_posts/2016-04-21-primer.md
@@ -24,4 +24,4 @@ http://jmcglone.com/guides/github-pages/
 Feito con [Jekyll](http://jekyllrb.com)
 
 Cómpre usar Markdown e disque [esta chuleta está estupenda](http://packetlife.net/media/library/16/Markdown.pdf) pero a miña tamén ten
-[o seu aquel](http://irocho.github.io/blog/2016/04/20/chuleta)
+[o seu aquel](chuleta)
