--- a/_posts/2016-04-20-chuleta.md
+++ b/_posts/2016-04-20-chuleta.md
@@ -8,9 +8,7 @@ esta molonada que parece código
 vai entre triple franchute
 ```
 
-# Pequena chuleta de Markdown 
-
-## esta liña e a anterior comenzan coa almohadilla
+## esta liña  comenza coa almohadilla
 
 ### nesta liña xa van tres almohadillas
 
@@ -38,6 +36,6 @@ __esto entre dobres guións baixos__
 
 [Fai clic aquí](https://irocho.github.io/2016/04/21/primer.html)
 
-![Cando sexa maior haberá unha imaxe aquí mismamente](/path/to/img.jpg)
+![Cando sexa maior haberá unha imaxe aquí mismamente](/imaxes/logo.png)
 
 Fixen todo esto coa axuda da [estupenda chuleta](http://packetlife.net/media/library/16/Markdown.pdf)
