--- a/_posts/2016-04-20-chuleta.md
+++ b/_posts/2016-04-20-chuleta.md
@@ -34,7 +34,7 @@ __esto entre dobres guións baixos__
 
 ---
 
-[Fai clic aquí](https://irocho.github.io/2016/04/21/primer.html)
+[Fai clic aquí](https://irocho.github.io/blog/2016/04/21/primer.html)
 
 ![Cando sexa maior haberá unha imaxe aquí mismamente](/imaxes/logo.png)
 
