Retocada primer.md

--- a/_posts/2016-04-21-primer.md
+++ b/_posts/2016-04-21-primer.md
@@ -1,26 +1,21 @@
 ---
 layout: post
-title: "Esta é a boa"
+title: "Probas"
 date: 2016-04-21
 ---
-
-Xa fabriquei o directorio `_posts/` e puxen de nome a este ficheiro
-
-`2016-04-21-primer.md`
-
-Para quen queira velo ten que premer na ligazón:
-[https://irocho.github.io/2016/04/21/primer.html](https://irocho.github.io/2016/04/21/primer.html)
-
-moito olliño coas diferencias entre o nome do ficheiro e o da URL:
-
-* guións por barras
-* .md por .html
-
-
 Fixen todo esto coa axuda do estupendo:
 
 http://jmcglone.com/guides/github-pages/
 
 Feito con [Jekyll](http://jekyllrb.com)
 
-Cómpre usar Markdown e disque [esta chuleta está estupenda](http://packetlife.net/media/library/16/Markdown.pdf) pero a miña tamén ten [o seu aquel](http://irocho.github.io/blog/2016/04/20/chuleta.html)
+Cómpre usar Markdown e disque [esta chuleta está estupenda](http://packetlife.net/media/library/16/Markdown.pdf)
+
+>> Fun facendo á vez o meu propio wiki-titorial para min mesma (facer clic abaixiño onde pon wiki)
+
+
+>> Facer clic onde pon *blog estático* para ir vendo o contido do blog.
+
+Moito olliño coas diferencias entre o nome do ficheiro e o da URL:
+* guións por barras
+* .md por .html
