Retocada primer.md

--- a/_posts/2016-04-21-primer.md
+++ b/_posts/2016-04-21-primer.md
@@ -3,19 +3,20 @@ layout: post
 title: "Probas"
 date: 2016-04-21
 ---
-Fixen todo esto coa axuda do estupendo:
 
-http://jmcglone.com/guides/github-pages/
+Esto é un [Jekyll](http://jekyllrb.com)
 
-Feito con [Jekyll](http://jekyllrb.com)
+Fíxose [coa axuda desta páxina](http://jmcglone.com/guides/github-pages/)
 
-Cómpre usar Markdown e disque [esta chuleta está estupenda](http://packetlife.net/media/library/16/Markdown.pdf)
 
->> Fun facendo á vez o meu propio wiki-titorial para min mesma (facer clic abaixiño onde pon wiki)
-
+>> Fun facendo á vez o meu propio wiki-titorial para ir contando como chegar ata aquí (facer clic abaixiño onde pon wiki)
 
 >> Facer clic onde pon *blog estático* para ir vendo o contido do blog.
 
+Cómpre usar Markdown e disque [esta chuleta está estupenda](http://packetlife.net/media/library/16/Markdown.pdf)
+
+
 Moito olliño coas diferencias entre o nome do ficheiro e o da URL:
+
 * guións por barras
 * .md por .html
