ligazóns atrás e diante

--- a/_posts/2016-04-21-primer.md
+++ b/_posts/2016-04-21-primer.md
@@ -13,7 +13,8 @@ Fíxose [coa axuda desta páxina](http://jmcglone.com/guides/github-pages/)
 
 >> Facer clic onde pon *blog estático* para ir vendo o contido do blog.
 
-Cómpre usar Markdown e disque [esta chuleta está estupenda](http://packetlife.net/media/library/16/Markdown.pdf)
+Cómpre usar Markdown e disque [
+](http://packetlife.net/media/library/16/Markdown.pdf)
 
 
 Moito olliño coas diferencias entre o nome do ficheiro e o da URL:
