--- a/_posts/2016-11-21-funcions.md
+++ b/_posts/2016-11-21-funcions.md
@@ -10,9 +10,15 @@ Hoxe en día un sistema operativo é un software moi complexo que permite que o 
 
 Outras funcións teñen un carácter máis técnico e serán as que traballaremos máis polo miúdo:
 
-* ### Xestión de permisos e usuarios: ###   Adxudica permisos de acceso e evita que as accións dun usuario afecten ó traballo que fai outro. Ou que un usuario cotillee nos documentos de outro sen permiso.
-* ### Control de concurrencia: ###   Establece prioridades cando se precise usar un recurso. Se varios programas teñen que usar o procesador non pode ser que o usen todos á vez e que se mesturen os datos.
-* ### Administración de memoria: ###   Asigna posicións de memoria e xestiona o seu uso. Non necesito preocuparme das posicións de memoria que estou ocupando.
-* ### Control de seguridade: ###   Garantiza que a información se almacene dun xeito seguro. Uns datos non poden pisar ós outros.
-* ### Apoio a programas: ###   permitindo o uso de servizo dispoñibles ou chamadas ó sistema.
-* ### Control de erros: ###   Xestiona os erros de hardware e a perda de datos.
+* #### Xestión de permisos e usuarios:
+  Adxudica permisos de acceso e evita que as accións dun usuario afecten ó traballo que fai outro. Ou que un usuario cotillee nos documentos de outro sen permiso.
+* #### Control de concurrencia:   
+Establece prioridades cando se precise usar un recurso. Se varios programas teñen que usar o procesador non pode ser que o usen todos á vez e que se mesturen os datos.
+* #### Administración de memoria:
+  Asigna posicións de memoria e xestiona o seu uso. Non necesito preocuparme das posicións de memoria que estou ocupando.
+* ####  Control de seguridade:
+  Garantiza que a información se almacene dun xeito seguro. Uns datos non poden pisar ós outros.
+* #### Apoio a programas:
+   permitindo o uso de servizo dispoñibles ou chamadas ó sistema.
+* ####  Control de erros:
+  Xestiona os erros de hardware e a perda de datos.
