--- a/_posts/2016-11-21-procesos.md
+++ b/_posts/2016-11-21-procesos.md
@@ -26,4 +26,6 @@ O contido da estructura de datos dun proceso que  permite controlar todos os asp
 * Recursos asociados:  Un proceso ten necesidades propias que ten que coñecer o sistema operativo, por exemplo o acceso a un ficheiro  determinado.
 
 
-Un proceso pódese crear, executar, poñelo en espera ou matalo. Existen uns procesos que se crean no arranque do sistema eqeu permanecen en segundo plano e son os que están pendentes do correo electrónico, de que se imprima correctamente ou de avisar de eventos da axenda. Estes procesos en Linux chámanse   demos   . Se quixéramos crear a man un proceso neste sistema operativo temos o comando   fork    e para monitorizar os procesos que se están executando usaremos   top, ps   . Se queremos rematar un proceso empregaremos   kill    indicando o PID. Moito olliño con facelo sen estar seguros do que facemos.
+Un proceso pódese crear, executar, poñelo en espera ou matalo. Existen uns procesos que se crean no arranque do sistema e permanecen en segundo plano. Son os que están pendentes do correo electrónico, de que se imprima correctamente ou de avisar de eventos da axenda. Estes procesos en Linux chámanse   _demos_.
+
+Se quixéramos crear a man un proceso neste sistema operativo temos o comando   _fork_    e para monitorizar os procesos que se están executando usaremos   _top_, _ps_   . Se queremos rematar un proceso empregaremos   _kill_    indicando o PID. Moito olliño con facelo sen estar seguros do que facemos.
