Despois de probar en local

--- a/_posts/2016-11-24-engadido.md
+++ b/_posts/2016-11-24-engadido.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: "Traído"
+title: "Traio ficheiro de só texto"
 date: 2016-11-24
 ---
 
-{% markdown test.md %}
+{% markdown kkkk.txt %}
