--- a/_posts/2016-11-25-kk.md
+++ b/_posts/2016-11-25-kk.md
@@ -1,3 +1,9 @@
+---
+layout: post
+title: "Importando"
+date: 2016-11-25
+---
+
 <div class="tab">
     {% capture my-include %}{% include test.md %}{% endcapture %}
     {{ my-include | markdownify }}
