--- a/_posts/2016-11-25-kk.md
+++ b/_posts/2016-11-25-kk.md
@@ -5,7 +5,5 @@ date: 2016-11-25
 plugin: markdown.rb
 ---
 
-<div class="tab">
-    {% capture my-include %}{% include test.md %}{% endcapture %}
-    {{ my-include | markdownify }}
-</div>
+
+{% markdown test.md %}
