--- a/_posts/2016-11-25-kk.md
+++ b/_posts/2016-11-25-kk.md
@@ -5,5 +5,7 @@ date: 2016-11-25
 plugin: markdown.rb
 ---
 
-
-{% markdown test.md %}
+<div class="tab">
+    {% capture my-include %}{% include test.md %}{% endcapture %}
+    {{ my-include | markdownify }}
+</div>
