--- a/_posts/2016-11-25-kk.md
+++ b/_posts/2016-11-25-kk.md
@@ -6,6 +6,6 @@ plugin: markdown.rb
 ---
 
 <div class="tab">
-    {% capture my-include %}{% include test.md %}{% endcapture %}
+    {% capture my-include %}{% include kkkk.txt %}{% endcapture %}
     {{ my-include | markdownify }}
 </div>
