escripito.sn convirte os .tex en .md para posts

--- a/_posts/2016-11-21-modos.md
+++ b/_posts/2016-11-21-modos.md
@@ -6,7 +6,7 @@ plugin: markdown.rb
 ---
 <div class="tab">
     {% capture my-include %}
-    {% include modos.txt %}
+    {% include modos.md %}
     {% endcapture %}
     {{ my-include | markdownify }}
 </div>
