--- a/_posts/2016-11-21-procesos.md
+++ b/_posts/2016-11-21-procesos.md
@@ -6,7 +6,7 @@ plugin: markdown.rb
 ---
 <div class="tab">
     {% capture my-include %}
-    {% include procesos.txt %}
+    {% include procesos.md %}
     {% endcapture %}
     {{ my-include | markdownify }}
 </div>
