--- a/latex/main.tex
+++ b/latex/main.tex
@@ -68,7 +68,7 @@ Sistemas Operativos Monoposto
 %%
 
 \section{Compoñentes dun sistema operativo}
-\input{cachos/modos.tex}
+\input{cachos/compoñentes.tex}
 
 
 
