--- a/latex/main.beamer.tex
+++ b/latex/main.beamer.tex
@@ -4,7 +4,9 @@
 %   Pasa do que non estea entre \begin{frame}
  \documentclass[ignorenonframetext]{beamer}
  
+ 
 %---------------------------------------------------------------------
 %Trae o contido
 %---------------------------------------------------------------------
-\input{pinta/configurarTorino}
+\input{configurarTorino}
+\include{main}
