--- a/latex/configurarTorino.tex
+++ b/latex/configurarTorino.tex
@@ -31,6 +31,5 @@
 %%---------------------------------------------------------------------
 %%  Trae contido
 %%---------------------------------------------------------------------
-
-\input{main.tex}
+%\include{main}
 
