simplifiquei os ficheiros dentro de_som

--- a/_som/222.md
+++ b/_som/222.md
@@ -1,10 +1,9 @@
 ---
 layout: som
 title: segunda
-image_path: /imaxes/logo.png
 ---
 
-Esta é o segundo .md dunha coleción
+Esta é o segundo .md dunha coleciónimage_path: /imaxes/logo.png
 
 
 Principal [a nosa][https://irocho.wordpress.com]
