Xusto antes do Travis

--- a/_som/111.md
+++ b/_som/111.md
@@ -3,7 +3,7 @@ layout: som
 title: primeiro
 ---
 
-Esta é o primeiro .md dunha coleción
+Para facer probas
 
 
 Principal [a nosa][https://irocho.wordpress.com]
