creada coleción _placa/

--- a/_montaxe/20I-O.md
+++ b/_montaxe/20I-O.md
@@ -1,6 +1,7 @@
 ---
 layout: montaxe
 title: Periféricos de entrada/saída
+published: false
 ---
 
 Chamaremos _periférico_ a calquera dispositivo que non vai dentro da caixa ou chasis do ordenador.
@@ -11,6 +12,23 @@ Clasificarémolos tendo en conta se permiten introducir datos no ordenador ou se
 * periféricos de saída: o ordenador mostra uns resultados,  _p.e. pantalla_
 * periféricos de I/O: permiten tanto meter datos como mostralos, _p.e. disco duro externo_
 
-Outra clasificación ten en conta se
+Outra clasificación ten en conta o seu uso:
 
-adhahsft rergtert
+* Periféricos de comunicacións: empléanse para establecer unha comunicación entre dous usuarios a través dos ordenadores, _p.e.módem router ou switch_
+* Periféricos de almacenamento: úsanse como memoria auxiliar á principal do ordenador. _p.e. pen ou recursos na nube_
+
+
+Este sistema consta de dúas partes:
+
+* Interfaz: encargase de xestionar o intercambio da información entre o periferico e a CPU. Adapta a información especifica de cada dispositivo en conxunto das sinais normalizadas de forma que actúa como interlocutor do periférico e a maquina.
+* Controlador: a súa misión é xestionar directamente o periférico. É un sistema electrónico ou mecánico que adoita ir integrado no propio periférico. cada periférico ten o seu.
+
+A xestión da E/S é un dos pilares fundamentais no rendemento dun ordenador, xa que todos os dispositivos que se conectan o equipo compiten polo uso da CPU para poder operar.
+
+
+A arquitectura de bus de E/S é o estándar máis usado nos ordenadores de propósito xeneral, pola súa simplicidade e flexibilidade.
+
+Existen outras arquitecturas para a xestion de E/S como:
+
+* E/S mapeada en memoria: memoria e interfaz comparten buses e portas de E/S
+* E/S aillada: cada dispositivo de E/S ten un bus dedicado
