--- a/_placa/04UC.md
+++ b/_placa/04UC.md
@@ -1,10 +1,10 @@
 ---
 layout: placa
-title: ->Unidade de control
+title: -> Unidade de control
 ---
 
 
-<img style="float: right;" alt="unidade de control" src="/imaxes/UC.jpg">
+<img style="float: right;" alt="unidade de control" height="256px" src="/imaxes/UC.jpg">
 
 
-A unidade de control é a central de operacións do micro. As ordes que lanza chámanse  _instruciónns_ e van sincronizadas co [reloxo do sistema]({{site.url}}/placa/15reloxo). As instrucións se son moi comoplexas poden empregar varios centos de ciclos de reloxo
+A unidade de control é a central de operacións do micro. As ordes que lanza chámanse  _instrucións_ e van sincronizadas co [reloxo do sistema]({{site.url}}/placa/15reloxo). As instrucións se son moi complexas poden empregar varios centos de ciclos de reloxo
