--- a/_js/t0.md
+++ b/_js/t0.md
@@ -1,6 +1,6 @@
 ---
 layout: js
-title: Tarefa 0
+title: Tarefa 0 : Crear infraestrutura 
 ---
 
  //<img style="float: right;" alt="capas" src= "/imaxes/capas.png">
