--- a/_js/t6.md
+++ b/_js/t6.md
@@ -1,6 +1,6 @@
 ---
 layout: js
-title: Tarefa 6
+title: Tarefa 6 : Condicionais
 ---
 Se entendes esto daquela non terás problema cos condicionais no caso contrario... vas ter que analizalo con calma. Ou o que vén sendo o mesmo: `if (`entendes `==` si`) {`No problem`} else {`analiza con calma`}`
 
