--- a/_js/t7.md
+++ b/_js/t7.md
@@ -1,6 +1,6 @@
 ---
 layout: js
-title: Tarefa 0
+title: Tarefa 7 : Funcións
 ---
 Como fabricamos as nosas propias funcións para despois chamalas? `function( ){ }` é a nosa solución. Debemos falar de ***parámetros*** e de `return`
 
