--- a/_javascript/t6.md
+++ b/_javascript/t6.md
@@ -1,5 +1,5 @@
 ---
-layout: js
+layout: javascript
 title: Tarefa 6 : Condicionais
 ---
 Se entendes esto daquela non terás problema cos condicionais no caso contrario... vas ter que analizalo con calma. Ou o que vén sendo o mesmo: `if (`entendes `==` si`) {`No problem`} else {`analiza con calma`}`
