--- a/_javascript/t7.md
+++ b/_javascript/t7.md
@@ -1,5 +1,5 @@
 ---
-layout: js
+layout: javascript
 title: Tarefa 7 : Funcións
 ---
 Como fabricamos as nosas propias funcións para despois chamalas? `function( ){ }` é a nosa solución. Debemos falar de ***parámetros*** e de `return`
