--- a/_javascript/t2.md
+++ b/_javascript/t2.md
@@ -1,8 +1,7 @@
 ---
 layout: javascript
-title: Tarefa 2 : Variables
+title: Tarefa 2 - Variables
 ---
-
 ## A nosa primeira variable `var` ou `let`
 
 Imos complicalo un chisco. Se non poñemos comiñas na tarefa anterior JavaScript entende que ten que poñer na ventá emerxente o valor dunha variable.😰
