--- a/_javascript/t5.md
+++ b/_javascript/t5.md
@@ -1,6 +1,6 @@
 ---
 layout: javascript
-title: Tarefa 5 : Charlando...
+title: Tarefa 5 - Charlando...
 ---
 ## Que tal se a páxina nos pregunta algo e respondemos?
 
