--- a/_javascript/t0.md
+++ b/_javascript/t0.md
@@ -4,7 +4,7 @@ title: Tarefa 0 - Crear infraestrutura
 ---
 ## Ferramentas
 
-Para traballar en local aconséllovos as versións [Portable](https://portableapps.com) de:
+Para traballar en local aconséllovos as [versións Portable](https://portableapps.com) de:
 
 - Editor: Sublime, Notepad++, Atom, Brackets, VS Code.. 
 - Navegadores: Firefox, Chrome, Chromium, Opera,... Firefox Developer Edition
