--- a/_javascript/t2.md
+++ b/_javascript/t2.md
@@ -10,7 +10,7 @@ Imos complicalo un chisco. Se non poñemos comiñas na tarefa anterior JavaScrip
 
 Precisamos unha carpeta á que imos chamar **tarefa2_var** que terá coma sempre un *.html* xunto cun *.css* e tamén un *.js.* Podemos facer o mesmo que na anterior tarefa:
 
-[ Tarefa 0: Crear infraestrutura](./t0)
+[ Tarefa 0: Crear infraestrutura](../t0)
 
 ## 🖥 Código
 
