--- a/_javascript/t1.md
+++ b/_javascript/t1.md
@@ -10,7 +10,7 @@ Comezamos co noso primeiro ficheiro de javascript empregando unha función que t
 
 Precisamos unha carpeta á que imos chamar **tarefa1_alert** que terá coma sempre un *.html* xunto cun *.css* e tamén un *.js.* Podemos facer o mesmo que na anterior tarefa:
 
-[ Tarefa 0: Crear infraestrutura](./t0.md)
+[ Tarefa 0: Crear infraestrutura](../t0)
 
 ## 🖥 Código
 
