--- a/_javascript/t3.md
+++ b/_javascript/t3.md
@@ -10,7 +10,7 @@ E como se fai unha raíz cadrada? Benvidos ó fascinante mundo das bibliotecas (
 
 Precisamos unha carpeta á que imos chamar **tarefa3_mates** 
 
-[ Tarefa 0: Crear infraestrutura](./t0.md)
+[ Tarefa 0: Crear infraestrutura](../t0)
 
 ## 🖥 Código
 
