--- a/_javascript/t4.md
+++ b/_javascript/t4.md
@@ -10,7 +10,7 @@ Algúen sabe o que significa sumar palabras? JavaScript é quen de facelo.
 
 Precisamos unha carpeta á que imos chamar **tarefa4_cadeas** que terá coma sempre un *.html* xunto cun *.css* e tamén un *.js.* Podemos facer o mesmo que na anterior tarefa:
 
-[ Tarefa 0: Crear infraestrutura](./t0.md)
+[ Tarefa 0: Crear infraestrutura](../t0)
 
 ## 💻 Código
 
