--- a/_javascript/t5.md
+++ b/_javascript/t5.md
@@ -10,7 +10,7 @@ Declaro unha variable coma sempre pero agora será o usuario o que lle dea valor
 
 Precisamos unha carpeta á que imos chamar **tarefa5_animados** que terá coma sempre un *.html* xunto cun *.css* e tamén un *.js.* Podemos facer o mesmo que na anterior tarefa:
 
-[ Tarefa 0: Crear infraestrutura](./t0.md)ad7)
+[ Tarefa 0: Crear infraestrutura](../t0)
 
 ## 🖥 Código
 
