--- a/_javascript/t6.md
+++ b/_javascript/t6.md
@@ -8,7 +8,7 @@ Se entendes esto daquela non terás problema cos condicionais no caso contrario.
 
 Precisamos unha carpeta á que imos chamar **tarefa6_condicionais** que terá coma sempre un *.html* xunto cun *.css* e tamén un *.js.* Podemos facer o mesmo que na anterior tarefa:
 
-[ Tarefa 0: Crear infraestrutura](./t0.md)
+[ Tarefa 0: Crear infraestrutura](../t0)
 
 ## 🖥 Código 1
 
