--- a/_javascript/t7.md
+++ b/_javascript/t7.md
@@ -8,7 +8,7 @@ Como fabricamos as nosas propias funcións para despois chamalas? `function( ){ 
 
 Precisamos unha carpeta á que imos chamar **tarefa7_funcións** que terá coma sempre un *.html* xunto cun *.css* e tamén un *.js.* Podemos facer o mesmo que na anterior tarefa:
 
-[ Tarefa 0: Crear infraestrutura](./t0.md)
+[ Tarefa 0: Crear infraestrutura](../t0)
 
 ## 🖥 Código 1
 
