--- a/_javascript/t4.md
+++ b/_javascript/t4.md
@@ -4,7 +4,7 @@ title: Tarefa 4 - Cadeas
 ---
 ## As nosas segundas variables `var` ou `let`
 
-Algúen sabe o que significa sumar palabras? JavaScript é quen de facelo.
+Alguén sabe o que significa sumar palabras? JavaScript é quen de facelo.
 
 ## 🧺 Preparación
 
