--- a/_javascript/t1.md
+++ b/_javascript/t1.md
@@ -16,7 +16,7 @@ Precisamos unha carpeta á que imos chamar **tarefa1_alert** que terá coma semp
 
 No ficheiro *escripito.js* tecleamos a seguinte liña de código:
 
-```js
+```javascript
     alert("Moi boas a todos");
 ```
 
@@ -28,13 +28,13 @@ Calcamos en  *index.html* e debería abrirse o navegador mostrando o resultado d
 
 Fai un pequeno cambio no teu ficheiro *.js*:
 
-```js
+```javascript
     alert("2+2");
 ```
 
 Agora caseque o mesmo pero sen comiñas:
 
-```js
+```javascript
     alert(2+2);
 ```
 
