--- a/_javascript/t3.md
+++ b/_javascript/t3.md
@@ -44,14 +44,6 @@ Sube ó teu repositorio en GitHub nunha carpeta á que chamaremos **tarefa3_mate
 
 ## Precisas axuda?
 
-[math.js](https://mathjs.org/)
+* [math.js](https://mathjs.org/)
 
-[JavaScript | Math Object - GeeksforGeeks](https://www.geeksforgeeks.org/javascript-math-object/)
-
-[Plan](https://www.notion.so/Plan-b41549c9cb064ef4a798ce919cd7652e)
-
-[Calendario](https://www.notion.so/261580d044ce47b8aece6609e766ecfb)
-
-[Recursos](https://www.notion.so/Recursos-de8a5559ecf44aea9e9d6a486a5c4d03)
-
-[Extras](https://www.notion.so/Extras-0194afa0a9744ed9aa87f5b22ba6a207)
+* [JavaScript | Math Object - GeeksforGeeks](https://www.geeksforgeeks.org/javascript-math-object/)
