--- a/_javascript/t3.md
+++ b/_javascript/t3.md
@@ -46,4 +46,4 @@ Sube ó teu repositorio en GitHub nunha carpeta á que chamaremos **tarefa3_mate
 
 * [math.js](https://mathjs.org/)
 
-* [JavaScript | Math Object - GeeksforGeeks](https://www.geeksforgeeks.org/javascript-math-object/)
+* [JavaScript, GeeksforGeeks](https://www.geeksforgeeks.org/javascript-math-object/)
