--- a/_javascript/t9.md
+++ b/_javascript/t9.md
@@ -1,6 +1,6 @@
 ---
 layout: javascript
-title: Tarefa 8 - DOM
+title: Tarefa 9 - Bucles ou lazos
 ---
 A idea ... non era facer páxinas web dinámicas????
 
