--- a/_javascript/t9.md
+++ b/_javascript/t9.md
@@ -2,18 +2,59 @@
 layout: javascript
 title: Tarefa 9 - Bucles ou lazos
 ---
-A idea ... non era facer páxinas web dinámicas????
+Repetir e repetir... menudo aburrimento, para eso están as maquinas!!!
 
 ## 🧺 Preparación
 
-Descarga ou fai un fork do [repositorio de exercicios resoltos de JavaScript](https://github.com/irocho/exerciciosJavascript).
+Precisamos unha carpeta á que imos chamar **tarefa9_bucles** que terá coma sempre un *.html* xunto cun *.css* e tamén un *.js.* Podemos facer o mesmo que na anterior tarefa: [ Tarefa 0: Crear infraestrutura](../t0)
 
-## 🖥 Códigos para analizar e argallar neles
 
-Analiza os exercicios 1, 2 e 3 que teñen en cadanseu *.html* ? Algunha novidade nos  *.js*  que non sexa:
+## 🖥 Código 1 
+
+A sintaxe do bucle `for` é un tanto enrevesada: dentro de paréntese, con puntos e comas polo medio, de súpeto esa _cruz_ repetida. Imos paseniño, falámolo na aula. Coma sempre tratade de entender o que pasa
 
 ```js
-    document.write(    );
+document.write('<h2> Bucle FOR</h2>');
+
+document.write('<h3>☞ Facer algo cinco veces</h3>');
+for (var i=1; i<= 5; i++) {
+	document.write('<p> Había una vez un barquito chiquitito... </p>');
+}
+```
+Agora ti: 
+
+* que pasa se en troques de 5 pos 27?
+* e se non repites o signo máis e pos dous menos inicializando a variable a 7 ?
+
+
+
+
+## 🖥 Código 2
+```js
+document.write('<h3>☞ Outra canción infantil</h3>');
+for (var i=2; i<= 10; i++) {
+	document.write(i +' 🐘 se balanceaban sobre la tela... ');
+}
+
+ ```
+ ## 🖥 Código 3
+
+```js
+
+document.write('<h3>☞ Aprender a contar ata 10</h3>');
+for (var i=0; i<= 10; i++) {
+	document.write(i + ', ');
+}
+```
+## 🖥 Código 4
+document.write('<h3>☞ Aprender a contar ata 44 de cinco en cinco comezando en 10</h3>');
+for (var i=10; i<= 44; i=i+5) {
+	document.write(i +', ');
+}
+
+//exercicio 4
+
+
 ```
 
  Fíxate ben no que acontece: estou engadindo etiquetas HTML dentro dunha función que trae de fábrica JavaScript nun ficheiro *.js*
