--- a/_javascript/t9.md
+++ b/_javascript/t9.md
@@ -2,16 +2,16 @@
 layout: javascript
 title: Tarefa 9 - Bucles ou lazos
 ---
-Repetir e repetir... menudo aburrimento, para eso están as maquinas!!!
+Repetir e repetir... menudo aburrimento, para eso están as maquinas!!! Nós pola nosa banda imos cantar e lembrar a infancia 😉
 
-## 🧺 Preparación
+### 🧺 Preparación
 
 Precisamos unha carpeta á que imos chamar **tarefa9_bucles** que terá coma sempre un *.html* xunto cun *.css* e tamén un *.js.* Podemos facer o mesmo que na anterior tarefa: [ Tarefa 0: Crear infraestrutura](../t0)
 
 
-## 🖥 Código 1 
+### 🖥 Código 1 
 
-A sintaxe do bucle `for` é un tanto enrevesada: dentro de paréntese, con puntos e comas polo medio, de súpeto esa _cruz_ repetida. Imos paseniño, falámolo na aula. Coma sempre tratade de entender o que pasa
+A sintaxe do bucle `for` é un tanto enrevesada: dentro de paréntese, con puntos e comas polo medio, de súpeto esa _cruz_ repetida. Imos paseniño, falámolo na aula. Coma sempre tratade de entender o que pasa:
 
 ```js
 document.write('<h2> Bucle FOR</h2>');
@@ -27,48 +27,53 @@ Agora ti:
 * e se non repites o signo máis e pos dous menos inicializando a variable a 7 ?
 
 
+### 🖥 Código 2
 
+Temos que sacar máis partido desa variable. Pedímoslle que non vaia dicindo canto vale.
 
-## 🖥 Código 2
 ```js
 document.write('<h3>☞ Outra canción infantil</h3>');
 for (var i=2; i<= 10; i++) {
 	document.write(i +' 🐘 se balanceaban sobre la tela... ');
 }
+```
 
- ```
- ## 🖥 Código 3
+Agora ti: 
+
+* que pasa se en troques de 2 pos 0 ?
+* e se non repites o signo máis e pos dous menos inicializando a variable a 13 ?
+
+### 🖥 Código 3
+Tanto teclear código e vai ser xusto no seguinte onde aprendemos a contar:
 
 ```js
-
 document.write('<h3>☞ Aprender a contar ata 10</h3>');
 for (var i=0; i<= 10; i++) {
 	document.write(i + ', ');
 }
 ```
-## 🖥 Código 4
+
+Agora ti: 
+
+* modifica todo para que conte de 22 ata 33
+* modifica todo para que conte para atrás de 88 ata 77
+
+
+### 🖥 Código 4
+
+Agora pegando saltitos
+
+
+```js
 document.write('<h3>☞ Aprender a contar ata 44 de cinco en cinco comezando en 10</h3>');
 for (var i=10; i<= 44; i=i+5) {
 	document.write(i +', ');
 }
-
-//exercicio 4
-
-
 ```
+Agora ti: 
 
- Fíxate ben no que acontece: estou engadindo etiquetas HTML dentro dunha función que trae de fábrica JavaScript nun ficheiro *.js*
+* modifica todo para que nos dea a lista de números pares
 
-## 🎞 Visualizar o javascript
+### 🎞 Visualizar o javascript
 
 Calcamos no *.html*  de cada exercicio. Debería abrirse o navegador mostrando o resultado do noso código.
-
-## ☁️   Proxecto de medallas olímpicas  ☁️
-
-1. Prepara unha carpeta coma sempre, chamada **tarefa8_medallista**.
-2. Fabrica unha función que ten de parámetro  de entrada a posición na que quedou un atleta e devolve o tipo de medalla que se lle concede.
-3. Pregunta ó usuario cal é a posición na que quedou.
-4. Chama á función pasándolle a resposta do usuario.
-5. Mostra na páxina web a posición do atleta e  o tipo de medalla que lle deron
-
-Sube ó teu repositorio a carpeta deste proxecto chamada **tarefa8_medallista**
