--- a/_javascript/t9.md
+++ b/_javascript/t9.md
@@ -54,15 +54,13 @@ for (var i=0; i<= 10; i++) {
 ```
 
 Agora ti: 
-
-* modifica todo para que conte de 22 ata 33
-* modifica todo para que conte para atrás de 88 ata 77
+> modifica todo para que conte de 22 ata 33
+> modifica todo para que conte para atrás de 88 ata 77
 
 
 ### 🖥 Código 4
 
-Agora pegando saltitos
-
+Agora pegando saltitos:
 
 ```js
 document.write('<h3>☞ Aprender a contar ata 44 de cinco en cinco comezando en 10</h3>');
