--- a/_javascript/t9.md
+++ b/_javascript/t9.md
@@ -23,8 +23,8 @@ for (var i=1; i<= 5; i++) {
 ```
 Agora ti: 
 
-* que pasa se en troques de 5 pos 27?
-* e se non repites o signo máis e pos dous menos inicializando a variable a 7 ?
+► que pasa se en troques de 5 pos 27 ?
+► e se non repites o signo máis e pos dous menos inicializando a variable a 7 ?
 
 
 ### 🖥 Código 2
@@ -40,8 +40,8 @@ for (var i=2; i<= 10; i++) {
 
 Agora ti: 
 
-* que pasa se en troques de 2 pos 0 ?
-* e se non repites o signo máis e pos dous menos inicializando a variable a 13 ?
+► que pasa se en troques de 2 pos 0 ?
+► e se non repites o signo máis e pos dous menos inicializando a variable a 13 ?
 
 ### 🖥 Código 3
 Tanto teclear código e vai ser xusto no seguinte onde aprendemos a contar:
@@ -55,8 +55,8 @@ for (var i=0; i<= 10; i++) {
 
 Agora ti: 
 
-> modifica todo para que conte de 22 ata 33
-> modifica todo para que conte para atrás de 88 ata 77
+► modifica todo para que conte de 22 ata 33
+► modifica todo para que conte para atrás de 88 ata 77
 
 
 ### 🖥 Código 4
@@ -71,7 +71,7 @@ for (var i=10; i<= 44; i=i+5) {
 ```
 Agora ti: 
 
-* modifica todo para que nos dea a lista de números pares
+► modifica todo para que nos dea a lista de números pares
 
 ### 🎞 Visualizar o javascript
 
