--- a/_javascript/t9.md
+++ b/_javascript/t9.md
@@ -14,9 +14,9 @@ Precisamos unha carpeta á que imos chamar **tarefa9_bucles** que terá coma sem
 A sintaxe do bucle `for` é un tanto enrevesada: dentro de paréntese, con puntos e comas polo medio, de súpeto esa _cruz_ repetida. Imos paseniño, falámolo na aula. Coma sempre tratade de entender o que pasa:
 
 ```js
-document.write('<h2> Bucle FOR</h2>');
+document.write('<h2> Bucle FOR </h2>');
 
-document.write('<h3>☞ Facer algo cinco veces</h3>');
+document.write('<h3> ☞ Facer algo cinco veces </h3>');
 for (var i=1; i<= 5; i++) {
 	document.write('<p> Había una vez un barquito chiquitito... </p>');
 }
@@ -32,7 +32,7 @@ Agora ti:
 Temos que sacar máis partido desa variable. Pedímoslle que non vaia dicindo canto vale.
 
 ```js
-document.write('<h3>☞ Outra canción infantil</h3>');
+document.write('<h3> ☞ Outra canción infantil </h3>');
 for (var i=2; i<= 10; i++) {
 	document.write(i +' 🐘 se balanceaban sobre la tela... ');
 }
@@ -47,7 +47,7 @@ Agora ti:
 Tanto teclear código e vai ser xusto no seguinte onde aprendemos a contar:
 
 ```js
-document.write('<h3>☞ Aprender a contar ata 10</h3>');
+document.write('<h3> ☞ Aprender a contar ata 10 </h3>');
 for (var i=0; i<= 10; i++) {
 	document.write(i + ', ');
 }
@@ -61,10 +61,10 @@ Agora ti:
 
 ### 🖥 Código 4
 
-Agora pegando saltitos:
+Pegando saltitos:
 
 ```js
-document.write('<h3>☞ Aprender a contar ata 44 de cinco en cinco comezando en 10</h3>');
+document.write('<h3> ☞ Aprender a contar ata 44 de cinco en cinco comezando en 10 </h3>');
 for (var i=10; i<= 44; i=i+5) {
 	document.write(i +', ');
 }
