--- a/_javascript/t0.md
+++ b/_javascript/t0.md
@@ -2,14 +2,14 @@
 layout: javascript
 title: Tarefa 0 - Crear infraestrutura 
 ---
-## Ferramentas
+### Ferramentas
 
 Para traballar en local aconséllovos as [versións Portable](https://portableapps.com) de:
 
 - Editor: Sublime, Notepad++, Atom, Brackets, VS Code.. 
 - Navegadores: Firefox, Chrome, Chromium, Opera,... Firefox Developer Edition
 
-## Ingredientes
+### Ingredientes
 
   Precisamos para cada proxecto unha carpeta que conteña os seguintes documentos:
 
@@ -19,7 +19,7 @@ Para traballar en local aconséllovos as [versións Portable](https://portableap
 
 No meu repositorio tes [unha pequena plantilla aquí](https://github.com/irocho/exerciciosJavascript/tree/master/exemplojs).
 
-## Novidades no código
+### Novidades no código
 
 Na cabeceira do *.html* temos que chamar ós outros ficheiros, polo que cómpre engadir:
 
@@ -31,7 +31,7 @@ Na cabeceira do *.html* temos que chamar ós outros ficheiros, polo que cómpre 
 
 Calca no *.html* para ver a pinta da páxina web no navegador. Non parece moi interesante🤷
 
-## O teu traballo
+### O teu traballo
 
 1. Crea un novo repositorio no teu GitHub que se chame `JavaScript`
 2. Fabrica a túa propia plantilla para usar  cun *.html* outro *.css* e un *.js* Súbea ó teu repositorio para tela a man.
