--- a/_javascript/t2.md
+++ b/_javascript/t2.md
@@ -2,17 +2,17 @@
 layout: javascript
 title: Tarefa 2 - Variables
 ---
-## A nosa primeira variable `var` ou `let`
+### A nosa primeira variable `var` ou `let`
 
 Imos complicalo un chisco. Se non poñemos comiñas na tarefa anterior JavaScript entende que ten que poñer na ventá emerxente o valor dunha variable.😰
 
-## 🧺 Preparación
+### 🧺 Preparación
 
 Precisamos unha carpeta á que imos chamar **tarefa2_var** que terá coma sempre un *.html* xunto cun *.css* e tamén un *.js.* Podemos facer o mesmo que na anterior tarefa:
 
 [ Tarefa 0: Crear infraestrutura](../t0)
 
-## 🖥 Código
+### 🖥 Código
 
 No ficheiro *.js* tecleamos a seguinte liña de código:
 
@@ -26,11 +26,11 @@ No código declaramos unha variable chamada `gastoHoxe` e démoslle o valor 10
 
 *Vale 👍🏽... tamén se pode poñer de golpe var gastoHoxe=10;👍🏽*
 
-## 🎞 Visualizar o javascript
+### 🎞 Visualizar o javascript
 
 Calcamos no *.html* e debería abrirse o navegador mostrando o resultado do noso código.
 
-## ✏️ Variacións: contas diarias
+### ✏️ Variacións: contas diarias
 
 Fai un pequeno cambio no teu ficheiro *.js*:
 
@@ -47,6 +47,6 @@ Inventa todas as variacións que se te ocurran: con sumas, decimais, restas, mul
 
 Fai as túas anotacións.
 
-## 🤓 Avanzado:
+### 🤓 Avanzado:
 
 [https://codepen.io/nominalaeon/post/using-variable-declarations-to-improve-readability](https://codepen.io/nominalaeon/post/using-variable-declarations-to-improve-readability)
