--- a/_javascript/t3.md
+++ b/_javascript/t3.md
@@ -2,17 +2,17 @@
 layout: javascript
 title: Tarefa 3 - Mates
 ---
-## Máis  contas nas librerías
+### Máis  contas nas librerías
 
 E como se fai unha raíz cadrada? Benvidos ó fascinante mundo das bibliotecas (ou librerías) das linguaxes de programación.
 
-## 🧺 Preparación
+### 🧺 Preparación
 
 Precisamos unha carpeta á que imos chamar **tarefa3_mates** 
 
 [ Tarefa 0: Crear infraestrutura](../t0)
 
-## 🖥 Código
+### 🖥 Código
 
 No ficheiro *.js* tecleamos:
 ```js
@@ -21,13 +21,13 @@ No ficheiro *.js* tecleamos:
     alert(raiz);
 ```
 
-## 🎞 Visualizar o javascript
+### 🎞 Visualizar o javascript
 
 Calcamos no *.html* e debería abrirse o navegador mostrando o resultado do noso código.
 
 Cando unha función non ven de fábrica pode ser que estea nunha biblioteca. No noso caso a función ***sqrt()*** forma parte da biblioteca ***Math*** polo que  se indica como `Math.sqrt();`
 
-## ☁️              Proxecto matemático    ☁️
+###   ☁️              Proxecto matemático    ☁️
 
 Investiga ti por internet un chisco na biblioteca `Math`
 
