--- a/_javascript/t4.md
+++ b/_javascript/t4.md
@@ -2,17 +2,17 @@
 layout: javascript
 title: Tarefa 4 - Cadeas
 ---
-## As nosas segundas variables `var` ou `let`
+### As nosas segundas variables `var` ou `let`
 
 Alguén sabe o que significa sumar palabras? JavaScript é quen de facelo.
 
-## 🧺 Preparación
+### 🧺 Preparación
 
 Precisamos unha carpeta á que imos chamar **tarefa4_cadeas** que terá coma sempre un *.html* xunto cun *.css* e tamén un *.js.* Podemos facer o mesmo que na anterior tarefa:
 
 [ Tarefa 0: Crear infraestrutura](../t0)
 
-## 💻 Código
+### 💻 Código
 
 No ficheiro *.js* tecleamos:
 
@@ -21,11 +21,11 @@ No ficheiro *.js* tecleamos:
     alert(euSon);
 ```
 
-## 🎞 Visualizar o javascript
+### 🎞 Visualizar o javascript
 
 Calcamos no *.html* e debería abrirse o navegador mostrando o resultado do noso código.
 
-## ✏️ Cambios interesantes
+### ✏️ Cambios interesantes
 
 Para facer un salto de liña:
 ```js
