--- a/_javascript/t5.md
+++ b/_javascript/t5.md
@@ -2,17 +2,17 @@
 layout: javascript
 title: Tarefa 5 - Charlando...
 ---
-## Que tal se a páxina nos pregunta algo e respondemos?
+### Que tal se a páxina nos pregunta algo e respondemos?
 
 Declaro unha variable coma sempre pero agora será o usuario o que lle dea valor
 
-## 🧺 Preparación
+### 🧺 Preparación
 
 Precisamos unha carpeta á que imos chamar **tarefa5_animados** que terá coma sempre un *.html* xunto cun *.css* e tamén un *.js.* Podemos facer o mesmo que na anterior tarefa:
 
 [ Tarefa 0: Crear infraestrutura](../t0)
 
-## 🖥 Código
+### 🖥 Código
 
 No ficheiro *.js* tecleamos:
 
@@ -26,13 +26,13 @@ No ficheiro *.js* tecleamos:
     alert("e... " + nome + ", o mundo adórate!");
 ```
 
-## 🎞 Visualizar o javascript
+### 🎞 Visualizar o javascript
 
 Calcamos no *.html* e debería abrirse o navegador mostrando o resultado do noso código.
 
 Subidón de autoestima se pos o teu nome!!!!
 
-## Pero.....
+### Pero.....
 
 O que teclea o usuario é un número ou unha cadea?? 
 
