--- a/_javascript/t6.md
+++ b/_javascript/t6.md
@@ -4,13 +4,13 @@ title: Tarefa 6 - Condicionais
 ---
 Se entendes esto daquela non terás problema cos condicionais no caso contrario... vas ter que analizalo con calma. Ou o que vén sendo o mesmo: `if (`entendes `==` si`) {`No problem`} else {`analiza con calma`}`
 
-## 🧺 Preparación
+### 🧺 Preparación
 
 Precisamos unha carpeta á que imos chamar **tarefa6_condicionais** que terá coma sempre un *.html* xunto cun *.css* e tamén un *.js.* Podemos facer o mesmo que na anterior tarefa:
 
 [ Tarefa 0: Crear infraestrutura](../t0)
 
-## 🖥 Código 1
+### 🖥 Código 1
 
 No ficheiro *.js* tecleamos:
 ```js
@@ -23,7 +23,7 @@ No ficheiro *.js* tecleamos:
     }
 ```
 
-## 🖥 Código 2
+### 🖥 Código 2
 
 Analiza o  seguinte código e trata de imaxinar como funciona:
 
@@ -37,11 +37,11 @@ Analiza o  seguinte código e trata de imaxinar como funciona:
     }
 ```
 
-## 🎞 Visualizar o javascript
+### 🎞 Visualizar o javascript
 
 Calcamos no *.html* e debería abrirse o navegador mostrando o resultado do noso código.
 
-## ✏️ Cambios interesantes
+### ✏️ Cambios interesantes
 
 Como se fará para que na alerta do código 1 para mostre que é medalla de bronce? 
 
