--- a/_javascript/t7.md
+++ b/_javascript/t7.md
@@ -4,13 +4,13 @@ title: Tarefa 7 - Funcións
 ---
 Como fabricamos as nosas propias funcións para despois chamalas? `function( ){ }` é a nosa solución. Debemos falar de ***parámetros*** e de `return`
 
-## 🧺 Preparación
+### 🧺 Preparación
 
 Precisamos unha carpeta á que imos chamar **tarefa7_funcións** que terá coma sempre un *.html* xunto cun *.css* e tamén un *.js.* Podemos facer o mesmo que na anterior tarefa:
 
 [ Tarefa 0: Crear infraestrutura](../t0)
 
-## 🖥 Código 1
+### 🖥 Código 1
 
 No ficheiro *.js* tecleamos:
 ```js
@@ -21,7 +21,7 @@ No ficheiro *.js* tecleamos:
     sumita(100,200);  
 ```
 
-## 🖥 Código 2
+### 🖥 Código 2
 
 Analiza o  seguinte código e trata de imaxinar como funciona:
 
@@ -33,7 +33,7 @@ Analiza o  seguinte código e trata de imaxinar como funciona:
     alert(resultado);
 ```
 
-## 🖥 Código 3
+### 🖥 Código 3
 
 ```js	
     function mediaNotas(trim1, trim2, trim3){
@@ -42,11 +42,11 @@ Analiza o  seguinte código e trata de imaxinar como funciona:
     alert(mediaNotas(5,5,7));
 ```
 
-## 🎞 Visualizar o javascript
+### 🎞 Visualizar o javascript
 
 Calcamos no *.html* e debería abrirse o navegador mostrando o resultado do noso código.
 
-## ✏️ Cambios interesantes
+### ✏️ Cambios interesantes
 
 Fabrica unha función como a do código 1 que se chame `multiplicar()` e que reciba tres parámetros. Chama  a esa función con `multiplicar(1,1,5);`
 
