--- a/_javascript/t9.md
+++ b/_javascript/t9.md
@@ -21,7 +21,7 @@ for (var i=1; i<= 5; i++) {
 	document.write('<p> Había una vez un barquito chiquitito... </p>');
 }
 ```
-Agora ti: 
+ ✏️ Cambios interesantes: 
 
 ► que pasa se en troques de 5 pos 27 ?
 ► e se non repites o signo máis e pos dous menos inicializando a variable a 7 ?
@@ -38,7 +38,7 @@ for (var i=2; i<= 10; i++) {
 }
 ```
 
-Agora ti: 
+✏️ Cambios interesantes: 
 
 ► que pasa se en troques de 2 pos 0 ?
 ► e se non repites o signo máis e pos dous menos inicializando a variable a 13 ?
@@ -53,7 +53,7 @@ for (var i=0; i<= 10; i++) {
 }
 ```
 
-Agora ti: 
+✏️ Cambios interesantes: 
 
 ► modifica todo para que conte de 22 ata 33
 ► modifica todo para que conte para atrás de 88 ata 77
@@ -69,7 +69,7 @@ for (var i=10; i<= 44; i=i+5) {
 	document.write(i +', ');
 }
 ```
-Agora ti: 
+✏️ Cambios interesantes: 
 
 ► modifica todo para que nos dea a lista de números pares
 
