--- a/_javascript/t8.md
+++ b/_javascript/t8.md
@@ -4,11 +4,11 @@ title: Tarefa 8 - DOM
 ---
 A idea ... non era facer páxinas web dinámicas????
 
-## 🧺 Preparación
+### 🧺 Preparación
 
 Descarga ou fai un fork do [repositorio de exercicios resoltos de JavaScript](https://github.com/irocho/exerciciosJavascript).
 
-## 🖥 Códigos para analizar e argallar neles
+### 🖥 Códigos para analizar e argallar neles
 
 Analiza os exercicios 1, 2 e 3 que teñen en cadanseu *.html* ? Algunha novidade nos  *.js*  que non sexa:
 
@@ -18,11 +18,11 @@ Analiza os exercicios 1, 2 e 3 que teñen en cadanseu *.html* ? Algunha novidade
 
  Fíxate ben no que acontece: estou engadindo etiquetas HTML dentro dunha función que trae de fábrica JavaScript nun ficheiro *.js*
 
-## 🎞 Visualizar o javascript
+### 🎞 Visualizar o javascript
 
 Calcamos no *.html*  de cada exercicio. Debería abrirse o navegador mostrando o resultado do noso código.
 
-## ☁️   Proxecto de medallas olímpicas  ☁️
+### ☁️   Proxecto de medallas olímpicas  ☁️
 
 1. Prepara unha carpeta coma sempre, chamada **tarefa8_medallista**.
 2. Fabrica unha función que ten de parámetro  de entrada a posición na que quedou un atleta e devolve o tipo de medalla que se lle concede.
